# OFFT

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Kommentare.txt  README.md  offt.sln
.github/workflows/: cmake.yaml  linux-test.yml  msbuild.yml  windows-test.yml
doc/: OfftSpeedComparison.md
examples/: CMakeLists.txt
examples/autotest/: CMakeLists.txt  autotest.vcxproj  main.cpp
examples/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.vcxproj  benchmark.vcxproj.filters  randomised_testing.cpp  randomised_testing.h  self_test.cpp  self_test.h  transform_test.h
examples/demo/: CMakeLists.txt  demo.cpp  demo.vcxproj  demo.vcxproj.filters
libs/: CMakeLists.txt
libs/offt/: CMakeLists.txt  fourier.h  fourier_parameters.cpp  offt.vcxproj  offt.vcxproj.filters
libs/offt/backend/: fourier_base.cpp  fourier_base.h  module_base.h  module_manager.cpp  module_manager.h  phasors.cpp  phasors.h  program.cpp  rader_module.cpp  standard_module.h  storage.cpp
libs/offt/backend/standard_modules/: module_11.cpp  module_12.cpp  module_13.cpp  module_14.cpp  module_15.cpp  module_16.cpp  module_17.cpp  module_18.cpp  module_19.cpp  module_2.cpp  module_21.cpp  module_25.cpp  module_26.cpp  module_27.cpp  module_28.cpp  module_29.cpp  module_30.cpp  module_32.cpp  module_4.cpp  module_6.cpp  module_7.cpp
libs/offt/math/: even_q.cpp  even_q.h  extended_gcd.cpp  factor_integer.cpp  gcd.cpp  gcd.h  list_product.cpp  list_product.h  miller_rabin_probable_prime_q.cpp  miller_rabin_probable_prime_q.h  mod.cpp  mod.h  odd_q.cpp  power_mod.cpp  power_mod.h  prime_q.cpp  prime_q.h  primitive_root.cpp  primitive_root.h  times_plus_mod.cpp
offt/: CMakeLists.txt  offt.vcxproj  offt.vcxproj.filters
offt/include/: offt.h
offt/include/offt/: compat.h  fourier_parameters.h  math.h
offt/include/offt/backend/: fourier_base.h
offt/include/offt/math/: extended_gcd.h  factor_integer.h  odd_q.h  times_plus_mod.h
offt/src/: fourier_parameters.cpp
offt/src/backend/: fourier_base.cpp  module_base.cpp  module_base.h  module_manager.cpp  module_manager.h  phasors.cpp  phasors.h  program.cpp  program.h  rader_module.cpp  rader_module.h  standard_module.h  storage.cpp  storage.h
offt/src/backend/standard_modules/: module_10.cpp  module_11.cpp  module_12.cpp  module_13.cpp  module_14.cpp  module_15.cpp  module_16.cpp  module_17.cpp  module_18.cpp  module_19.cpp  module_2.cpp  module_20.cpp  module_21.cpp  module_22.cpp  module_23.cpp  module_24.cpp  module_25.cpp  module_26.cpp  module_27.cpp  module_28.cpp  module_29.cpp  module_3.cpp  module_30.cpp  module_31.cpp  module_32.cpp  module_4.cpp  module_5.cpp  module_6.cpp  module_7.cpp  module_8.cpp  module_9.cpp
offt/src/math/: even_q.cpp  extended_gcd.cpp  factor_integer.cpp  gcd.cpp  list_product.cpp  miller_rabin_probable_prime_q.cpp  mod.cpp  odd_q.cpp  power_mod.cpp  prime_q.cpp  primitive_root.cpp  times_plus_mod.cpp
theory/: AgarwalCooley.nb  AnotherTest.nb  Basics.nb  Bilinear.nb  Bilinear2.nb  Bilinear3.nb  Bilinear4.nb  FftDefinitions.wl  FftDefinitionsOld.wl  Fourier.nb  Fourier2.nb  Fourier3.nb  FourierAsMatrices.nb  FourierAsMatrices2.nb  KroneckerProduct.nb  NewCodeGenerator.nb  NewCodeGenerator2.nb  NewCodeGenerator3.nb  NewCodeGenerator4.nb  NewCodeGenerator5.nb  Permutation.nb  PrimePowerRader.nb  README.md  RaderDemo.nb  VariableAllocation.nb  VariableAllocation2.nb
