add_library(offt
    fourier_parameters.cpp
    math/even_q.cpp
    math/extended_gcd.cpp
    math/factor_integer.cpp
    math/gcd.cpp
    math/list_product.cpp
    math/miller_rabin_probable_prime_q.cpp
    math/mod.cpp
    math/odd_q.cpp
    math/power_mod.cpp
    math/prime_q.cpp
    math/primitive_root.cpp
    math/times_plus_mod.cpp                     
    backend/fourier_base.cpp
    backend/module_manager.cpp
    backend/phasors.cpp
    backend/program.cpp
    backend/rader_module.cpp
    backend/storage.cpp
    backend/standard_modules/module_2.cpp
    backend/standard_modules/module_3.cpp
    backend/standard_modules/module_4.cpp
    backend/standard_modules/module_5.cpp
    backend/standard_modules/module_6.cpp
    backend/standard_modules/module_7.cpp
    backend/standard_modules/module_8.cpp
    backend/standard_modules/module_9.cpp
    backend/standard_modules/module_10.cpp
    backend/standard_modules/module_11.cpp
    backend/standard_modules/module_12.cpp
    backend/standard_modules/module_13.cpp
    backend/standard_modules/module_14.cpp
    backend/standard_modules/module_15.cpp
    backend/standard_modules/module_16.cpp
    backend/standard_modules/module_17.cpp
    backend/standard_modules/module_18.cpp
    backend/standard_modules/module_19.cpp
    backend/standard_modules/module_20.cpp
    backend/standard_modules/module_21.cpp
    backend/standard_modules/module_22.cpp
    backend/standard_modules/module_23.cpp
    backend/standard_modules/module_24.cpp
    backend/standard_modules/module_25.cpp
    backend/standard_modules/module_26.cpp
    backend/standard_modules/module_27.cpp
    backend/standard_modules/module_28.cpp
    backend/standard_modules/module_29.cpp
    backend/standard_modules/module_30.cpp
    backend/standard_modules/module_31.cpp
    backend/standard_modules/module_32.cpp
)

set_property(TARGET offt PROPERTY CXX_STANDARD 11)
set_property(TARGET offt PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET offt PROPERTY CXX_EXTENSIONS OFF)
